--- a/pack.project.json
+++ b/pack.project.json
@@ -1,7 +1,7 @@
 {
     "name": "Boids",
     "tree": {
-      "$path": "Include/Linking.lua",
+      "$path": "Include/Linking.luau",
       "Packages": {
         "$path": "Packages",
         "Boids": {
